Adicionando Estrutura principal e Model
